--- a/src/template/index.html
+++ b/src/template/index.html
@@ -9,9 +9,11 @@
             require('raw-loader!babel-loader!../../node_modules/lib-flexible/flexible')
         }
     </script>
+    
     <title>Template</title>
 </head>
 <body>
     <div id="app"></div>
+    <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.min.js"></script> -->
 </body>
 </html>
